# Facefy

./: .gitignore  README.md  com.felixbrezo.Facefy.flatpakref  com.felixbrezo.Facefy.json  com.felixbrezo.GraniteTemplate.json  meson.build
data/: com.felixbrezo.Facefy.appdata.xml.in  com.felixbrezo.Facefy.desktop.in  com.felixbrezo.GraniteTemplate.appdata.xml.in  com.felixbrezo.GraniteTemplate.desktop.in  meson.build
doc/: HACKING.md  USE_ME.md  class_diagram.txt
doc/support/ca/: README.md
doc/support/en/: README.md
doc/support/es/: README.md
po/: LINGUAS  POTFILES  ca.po  com.felixbrezo.Facefy.pot  com.felixbrezo.GraniteTemplate.pot  en.po  es.po
src/: Application.vala  Window.vala  meson.build
src/core/: Clipboard.vala  Comparison.vala  Face.vala  PyfacesClient.vala  SomethingHelpful.vala  SourceImage.vala  TaskState.vala  Utils.vala
src/gui/: AboutDialog.vala  ComparisonView.vala  ExtractionView.vala  FaceInfoPane.vala  HeaderBar.vala  MainView.vala  PopulateDialog.vala  SampleDialog.vala  SettingsMenu.vala  WelcomeView.vala
